sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {

  do{
    
    var j=0
    var ech=false
    
    for (i <- 1 to getNombreValeurs()-1){
      
      j=i+1
      if (!plusPetit(i,j)){
        echange(i,j)
        ech=true
      }
    }
  } while (ech==true)


}